corrected texts alignments

--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -33,8 +33,9 @@
       font-weight: 400;
       overflow-x: hidden;
       position: relative;
-      // background: linear-gradient(#cb72c2, #ff8fc7, #ffd1c4) !important;
+      //background: linear-gradient(#cb72c2 5%, #ff8fc7, #ffd6ca, #fdf0e6, #fbf1ef) !important;
       // color: #000 !important;
+      background-color: rgb(237, 237, 229);
       font-family: 'Centra', sans-serif !important;
 
       h1, h2, h3, h4, h5, h6{
