--- a/my-app/src/components/About/About.scss
+++ b/my-app/src/components/About/About.scss
@@ -1,17 +1,15 @@
-.about{
-    
+#about{
+    height: 540px;
     padding: 20px 0 50px 0;
     position: relative;
     width: 100%;
-    .intro{
+
+    .about-paragraph{
         margin: auto;
         width: 75%;
         position: relative;
-        margin-bottom: 12%;
+        // margin-bottom: 12%;
     }
-    .about-page{
-        margin-bottom: 60px;
-    }
-
+    
 }
 
