--- a/my-app/src/components/TechStack/TechStack.scss
+++ b/my-app/src/components/TechStack/TechStack.scss
@@ -1,5 +1,6 @@
 
-.tool{
+#techstack{
+    height: 480px;
     h1{
         margin-bottom: 20px;
         
@@ -14,45 +15,15 @@
             padding: 8px;
 
             .icon{
-                width: 100px;
-                height: 150px;
+                width: 80px;
+                height: 100px;
+            }
+            .caption{
+                color: grey !important;
             }
         }
         
     }
 
-}
-
-@media (max-width: 889px){  //laptop screen
-    .tool .img-container .img-holder .icon{
-        height: 100px;
-    }
-}
-
-@media (max-width: 576px){ //tablet / mobile screen 
-    .tool {
-    
-    .img-container {
-        gap: 2%;
-        margin: 0 10px 0 10px;
-
-    .img-holder{
-        width: 10vw;
-        height: 70px;
-
-
-        .icon{
-            width: 100%;
-            height: 30px;
-        }
-
-        span{
-            width: 100%;
-            
-            font-size: 8px;
-        }
-    } 
-} 
-}
 }
 
